--- a/src/beer-app.html
+++ b/src/beer-app.html
@@ -488,7 +488,7 @@
         <!--<a name="browse" aria-label="Browse beers" href$="/[[nameUrl]]/browse[[orgParam]]"><iron-icon class="drawer-icon" icon="beer-icons:near-me"></iron-icon>Browse</a>-->
 
       </iron-selector>
-      <div class="extra-links" hidden$="[[verified]]" on-tap="_verifyAccount"><iron-icon class="drawer-icon" icon="beer-icons:account"></iron-icon>Verify account</div>
+      <div class="extra-links" hidden$="[[verified]]" on-tap="_verifyAccount"><iron-icon class="drawer-icon" icon="beer-icons:account"></iron-icon>Verify email</div>
       <div class="extra-links" hidden$="[[!user]]" on-tap="_logout"><iron-icon class="drawer-icon" icon="beer-icons:account"></iron-icon>Sign out</div>
       <div class="extra-links" hidden$="[[user]]" on-tap="_login"><iron-icon class="drawer-icon" icon="beer-icons:account"></iron-icon>Sign in</div>
       <div class="extra-links">Terms of use</div>
@@ -994,13 +994,16 @@
       _updateUserBaseData: function (user){
         
           if(user){
-            this.login = false;
-            console.log('user', user);
+            
+            // console.log('user', user);
             if(user.emailVerified){
               this.verified = true;
             }else{
               this.verified = false;
             }
+          }else{
+            // console.log('notLoggedIn')
+            this.verified = true;
           }
       },
 
