update account information page

--- a/src/beer-login.html
+++ b/src/beer-login.html
@@ -34,7 +34,7 @@
 
     .login{
         @apply(--layout-vertical);
-        
+
     }
 
 
@@ -43,7 +43,7 @@
     }
     
     .buttons > div{
-        @apply(--layout-horizontal);
+        @apply(--layout-vertical);
         @apply(--layout-center-justified);
     }
 
