--- a/src/beer-menu-edit.html
+++ b/src/beer-menu-edit.html
@@ -154,6 +154,18 @@
          categorySortOrder:{
           type: Number
         },
+
+        menuCategoryId:{
+          type: String
+        },
+
+        menuId:{
+          type:String
+        },
+
+        orgId:{
+          type: String
+        }
         
       },
 
