--- a/src/beer-foodtruck-card.html
+++ b/src/beer-foodtruck-card.html
@@ -56,17 +56,20 @@
       }
 
       .truck-name{
-        font-size: 2em;
-        font-weight: 200;
+        font-size: 1.5em;
+        font-weight: 300;
         line-height: 70px;
-        color: var(--app-accent-color);
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        color: var(--app-primary-color);
       }
 
       .category-title{
-        font-size: 1.5em;
-        font-weight: 300;
+        font-size: 1.2em;
+        font-weight: 400;
         text-align: center;
-        color: var(--app-primary-color);
+        color: var(--app-accent-color);
       }
 
       .category-description{
@@ -122,6 +125,15 @@
         margin: 5px 0 5px 0;
       }
 
+      .seperate {
+        font-size: 2em;
+        font-weight: 500;
+        color: var(--app-accent-color);
+        @apply(--layout-horizontal);
+        @apply(--layout-center-justified);
+        margin: 0 0 30px 0;
+      }
+
 
 
     </style>
@@ -172,10 +184,15 @@
             </div>
           </template>
 
+          <div class="seperate">
+            <iron-icon icon="beer-icons:seperate"></iron-icon>
         </div>
 
+        </div>
 
+        
       </template>
+      
 
     </paper-material>
 
