--- a/src/beer-favorite-beer-card.html
+++ b/src/beer-favorite-beer-card.html
@@ -8,7 +8,10 @@
 
 
 <link rel="import" href="../bower_components/polymerfire/firebase-document.html">
-<link rel="import" href="../bower_components/geo-query/geo-query.html">
+<!--<link rel="import" href="../bower_components/geo-query/geo-query.html">-->
+<link rel="import" href="../bower_components/geo-query/geofire-import.html">
+
+
 
 <link rel="import" href="beer-icons.html">
 <link rel="import" href="beer-beer-rating.html">
