--- a/my_components/data/upload-image.html
+++ b/my_components/data/upload-image.html
@@ -11,7 +11,7 @@
 <!--<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">-->
 <link rel="import" href="../../bower_components/iron-label/iron-label.html">
 <link rel="import" href="../../bower_components/paper-progress/paper-progress.html">
-<link rel="import" href="../../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 
 <link rel="import" href="../../src/beer-button.html">
@@ -81,7 +81,7 @@
   
   
   <div>
-  <paper-card elevation="0" animated-shadow="false">
+  <paper-material elevation="0" animated-shadow="false">
 
      <paper-progress 
           class="uploader-progress"
@@ -117,7 +117,7 @@
  
      
 
-  </paper-card>
+  </paper-material>
   </div>
   
 </template>
