combine pub and brewery

--- a/src/beer-favorite.html
+++ b/src/beer-favorite.html
@@ -66,24 +66,14 @@
           </div>
 
           <div class="item message">
-            Breweries you have selected as four or five stars.
+            Pubs and breweries you have selected as four or five stars.
          </div>
 
           <div class="item">
-          <beer-button>
-            <a aria-label="My Favorite Breweries" href="/home/favorite/brewery">My Favorite Breweries</a>
-          </beer-button>
-        </div>
-
-        <div class="item message">
-          Pubs you have selected as four or five stars. Note that many breweries pour their beer, but most pubs do not create their own beer.
-         </div>
-
-          <div class="item">
-          <beer-button>
-            <a aria-label="My Favorite Pubs" href="/home/favorite/pub">My Favorite Pubs</a>
-          </beer-button>
-        </div>
+            <beer-button>
+              <a aria-label="My Favorite Breweries" href="/home/favorite/brewery">My Favorite Breweries</a>
+            </beer-button>
+          </div>
 
           
 
