--- a/src/beer-app.html
+++ b/src/beer-app.html
@@ -362,6 +362,8 @@
       all-array="{{allArray}}">
   </beer-cache-data>
 
+
+
   <beer-geo-data
     org-id="[[orgId]]"
     location="[[location]]"
@@ -623,6 +625,10 @@
 
         location:{
           type: Object,
+        },
+
+        locationHistory:{
+          type: Array
         },
         
 
