css updates and cleanup

--- a/src/beer-beer-add.html
+++ b/src/beer-beer-add.html
@@ -280,7 +280,13 @@
     </paper-material>
     </div>
 
-    <paper-toast class="toast" id="savedToast" duration="5000" vertical-offset="150">
+    <paper-toast 
+        class="toast" 
+        id="savedToast" 
+        duration="5000"
+        horizontal-align="right"
+        horizontal-offset="50"
+        vertical-offset="100">
       <div> 
         Saved [[name]]
         <br>
