--- a/src/beer-menu.html
+++ b/src/beer-menu.html
@@ -267,7 +267,9 @@
 
      <paper-toast 
         id="toast" 
-        duration="0" 
+        duration="0"
+        horizontal-align="right"
+        horizontal-offset="50"
         vertical-offset="100">
         <div>
           <a class="edit-link" href="/[[editLink]]" on-tap="_closeToast"> 
