--- a/src/beer-pub-icons.html
+++ b/src/beer-pub-icons.html
@@ -55,7 +55,12 @@
         </div>
 
         
-        <paper-toast id="toast" text="[[message]]">
+        <paper-toast 
+            id="toast" 
+            horizontal-align="right"
+            horizontal-offset="50"
+            vertical-offset="100"
+            text="[[message]]">
           <!--<paper-button>TEST</paper-button>-->
         </paper-toast>
         
