--- a/src/beer-allbeers.html
+++ b/src/beer-allbeers.html
@@ -1,5 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/iron-collapse/iron-collapse.html">
+<link rel="import" href="../bower_components/iron-label/iron-label.html">
+
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../bower_components/paper-spinner/paper-spinner-lite.html">
 
@@ -58,14 +60,12 @@
 
     </style>
 
-     <firebase-query
-        app-name="beer"
-        id="beers">
-    </firebase-query>
+
 
 
     <firebase-query
         app-name="beer"
+        id="beers"
         path="category/STYLECATEGORY"
         data="{{categories}}">
     </firebase-query>
