--- a/src/beer-beer-edit.3.html
+++ b/src/beer-beer-edit.3.html
@@ -285,7 +285,13 @@
     </paper-material>
     </div>
 
-    <paper-toast class="toast" id="savedToast" duration="5000" vertical-offset="150">
+    <paper-toast 
+        class="toast" 
+        id="savedToast"
+        horizontal-align="right"
+        horizontal-offset="50"
+        vertical-offset="100" 
+        duration="5000">
       <div> 
         Saved [[savedMessage]]
         <br>
