--- a/src/beer-beer-edit.html
+++ b/src/beer-beer-edit.html
@@ -175,7 +175,13 @@
     </paper-material>
 
 
-   <paper-toast class="toast" id="savedToast" duration="5000" vertical-offset="150">
+   <paper-toast 
+      class="toast" 
+      id="savedToast" 
+      horizontal-align="right"
+      horizontal-offset="50"
+      vertical-offset="100"
+      duration="5000">
       <div> 
         Saved [[savedMessage]]
         <br>
