--- a/src/beer-contact.html
+++ b/src/beer-contact.html
@@ -14,7 +14,6 @@
 <link rel="import" href="../my_components/data/upload-image.html">
 
 <link rel="import" href="beer-fab.html">
-<link rel="import" href="beer-fab-search.html">
 <link rel="import" href="beer-contact-card.html">
 <link rel="import" href="beer-hours-card.html">
 
@@ -130,6 +129,10 @@
 
         category:{
           type: Object
+        },
+
+        orgId:{
+          type: String
         },
 
         organization:{
