--- a/src/beer-menu-edit-price.html
+++ b/src/beer-menu-edit-price.html
@@ -1,6 +1,8 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/iron-list/iron-list.html">
 <link rel="import" href="../bower_components/iron-label/iron-label.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
+
 
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
@@ -75,7 +77,7 @@
                     auto-validate 
                     allowed-pattern="[0-9.,]"
                     error-message="Must be a number">
-                    <div prefix>$</div>
+                    <div slot="prefix">$</div>
                   </paper-input>
               </div>
               
