removed paper-time-input

--- a/src/beer-foodtruck-calendar.html
+++ b/src/beer-foodtruck-calendar.html
@@ -14,6 +14,8 @@
 <link rel="import" href="../bower_components/toggle-icon/toggle-icon.html">
 <link rel="import" href="../bower_components/paper-time-input/paper-time-input.html">
 
+<link rel="import" href="beer-foodtruck-calendar-input.html">
+
 
 <link rel="import" href="beer-icons.html">
 
@@ -121,23 +123,23 @@
                 
 
                   <div>
-                    <paper-time-input
+                    <beer-foodtruck-calendar-input
                         label="Opening"
                         hour="{{openHour}}"
                         min="{{openMinute}}"
                         am-pm="{{openAmPm}}"
                         hideLabel>
-                    </paper-time-input>
+                    </beer-foodtruck-calendar-input>
                   </div>
 
                   <div> 
-                    <paper-time-input
+                    <beer-foodtruck-calendar-input
                         label="Closing"
                         hour="{{closeHour}}"
                         min="{{closeMinute}}"
                         am-pm="{{closeAmPm}}"
                         hideLabel>
-                    </paper-time-input>
+                    </beer-foodtruck-calendar-input>
                   </div>
 
                  
