--- a/src/beer-location-data.html
+++ b/src/beer-location-data.html
@@ -150,7 +150,7 @@
 
       _watchLocationChange: function (location){
         //resets timestamp so preloads final view on reload.
-        // this._setToLocalHistory(location);
+        this._setToLocalHistory(location);
         
         
       },
