--- a/src/lazy-resources.html
+++ b/src/lazy-resources.html
@@ -29,3 +29,5 @@
 <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
+
+<link rel="import" href="../bower_components/neon-animation/web-animations.html">
