--- a/src/beer-button.html
+++ b/src/beer-button.html
@@ -37,7 +37,7 @@
         color: #FFF;
       }
 
-      @media (max-width: 767px) {
+      /*@media (max-width: 767px) {
 
         beer-button[responsive] {
           @apply(--layout-fixed-bottom);
@@ -59,7 +59,7 @@
           background-color: var(--app-accent-color);
         }
 
-      }
+      }*/
 
     </style>
   </template>
