--- a/src/beer-pub.html
+++ b/src/beer-pub.html
@@ -38,6 +38,12 @@
   <template>
 
     <style include="beer-button">
+
+      :host {
+        display: block;
+        max-width: 640px;
+      }
+      
       a{
         text-decoration: none;
       }
