--- a/src/beer-review.html
+++ b/src/beer-review.html
@@ -16,16 +16,17 @@
 
     <style>
 
+      :host {
+        display: block;
+        max-width: 640px;
+      }
+
 
       .review {
         font-size: 2.0em;
         font-weight: 500;
         margin: 40px 5px 0 20px;
       }
-
-     
-  
-
 
 
     </style>
