--- a/src/beer-tap-edit.html
+++ b/src/beer-tap-edit.html
@@ -24,6 +24,12 @@
   <template>
 
     <style>
+
+      :host {
+        display: block;
+        max-width: 640px;
+      }
+      
       .add{
         color: green;
       }
