--- a/src/beer-tap.html
+++ b/src/beer-tap.html
@@ -29,7 +29,12 @@
 
     <style>
 
-    a{
+      :host {
+        display: block;
+        max-width: 640px;
+      }
+
+      a{
         text-decoration: none;
         font-size: 1em;
         font-weight: 300;
