--- a/src/beer-tv.html
+++ b/src/beer-tv.html
@@ -28,7 +28,10 @@
 
   <style is="custom-style">
     
-      
+      :host {
+        display: block;
+        max-width: 640px;
+      }
 
       a{
         color: var(--app-accent-color);
