--- a/src/beer-beer-edit.html
+++ b/src/beer-beer-edit.html
@@ -25,6 +25,11 @@
 
     <style>
 
+     :host {
+        display: block;
+        max-width: 640px;
+      }
+
       a{
         font-size: 16px;
         font-weight: 600;
