--- a/src/beer-beer-info.html
+++ b/src/beer-beer-info.html
@@ -20,7 +20,11 @@
 
     <style>
 
-
+    :host {
+        display: block;
+        max-width: 640px;
+      }
+      
      a{
       color: var(--app-primary-color);
       text-decoration: none;
