--- a/src/beer-contact.html
+++ b/src/beer-contact.html
@@ -22,11 +22,18 @@
   <template>
 
     <style>
+
+      :host {
+        display: block;
+        width: 640px;
+        /*border: 1px solid red;*/
+      }
+      
       .wrapper{
         @apply(--layout-vertical);
-        
         @apply(--layout-center-justified);
       }
+
       .item{
         @apply(--layout-horizontal);
         @apply(--layout-center-justified);
@@ -44,11 +51,6 @@
         font-weight: 300;
         margin: 10px 5px 0 20px;
       }
-      /*.address2{
-         @apply(--layout-horizontal);
-         @apply(--layout-start-justified);
-         @apply(--layout-wrap);
-      }*/
 
 
 
@@ -59,6 +61,7 @@
         style="width:100%; height:300px; background-color: #F8F8F8;"
         sizing="cover" 
         preload 
+        placeholder="[[placeholder]]"
         fade
         src="[[photoUrl]]">
     </iron-image>
@@ -147,6 +150,11 @@
           type: Object
         },
 
+        placeholder: {
+          type: String,
+          computed: '_computePhotoPlaceholder(organization, place)'
+        },
+
         photoUrl: {
           type: String,
           computed: '_computePhotoUrl(category, place)'
@@ -189,6 +197,21 @@
         var body = document.querySelector('body');
         Polymer.dom(body).appendChild(this.$.editDialog);
         this.$.editDialog.open()
+      },
+
+       _computePhotoPlaceholder: function (category, place) {
+        try{
+          if(category.image){
+            if(category.image.banner){
+              if(category.image.banner.thumbnail){
+                return 'data:image/png;base64, '+category.image.banner.thumbnail;
+              }
+            }
+          }
+
+        }catch (error){
+
+       }
       },
 
       _test: function (obj){
