--- a/src/beer-favorite-beer.html
+++ b/src/beer-favorite-beer.html
@@ -17,6 +17,12 @@
   <template>
 
     <style>
+
+    :host {
+        display: block;
+        max-width: 640px;
+      }
+      
     .card{
           padding: 10px;
           margin: 10px;
