--- a/src/beer-favorite-brewery.html
+++ b/src/beer-favorite-brewery.html
@@ -14,6 +14,11 @@
 
     <style>
 
+      :host {
+        display: block;
+        max-width: 640px;
+      }
+
     </style>
 
     <firebase-auth 
