--- a/src/beer-foodtruck-edit.html
+++ b/src/beer-foodtruck-edit.html
@@ -24,6 +24,11 @@
 
     <style>
 
+      :host {
+        display: block;
+        max-width: 640px;
+      }
+
      a{
       color: var(--app-primary-color);
       text-decoration: none;
