--- a/src/beer-foodtruck.html
+++ b/src/beer-foodtruck.html
@@ -22,6 +22,12 @@
   <template> 
 
     <style>
+
+      :host {
+        display: block;
+        max-width: 640px;
+      }
+      
       a{
         color: var(--app-accent-color);
         text-decoration: none;
