--- a/src/beer-home.html
+++ b/src/beer-home.html
@@ -31,6 +31,11 @@
 
     <style>
 
+      :host {
+        display: block;
+        max-width: 640px;
+      }
+
      a{
       color: var(--app-primary-color);
       text-decoration: none;
@@ -121,7 +126,6 @@
       }
 
      
-
       
     </style>
 
