--- a/src/beer-menu-edit.html
+++ b/src/beer-menu-edit.html
@@ -22,6 +22,11 @@
 
     <style>
 
+      :host {
+        display: block;
+        max-width: 640px;
+      }
+
       .add{
         color: green;
       }
