--- a/src/beer-menu.html
+++ b/src/beer-menu.html
@@ -25,6 +25,14 @@
   <template>
 
     <style>
+
+      :host {
+        display: block;
+        max-width: 640px; 
+      }
+
+     
+      
       a{
         color: var(--app-accent-color);
         text-decoration: none;
