--- a/src/beer-search.html
+++ b/src/beer-search.html
@@ -30,6 +30,11 @@
 
     <style>
 
+      :host {
+        display: block;
+        max-width: 640px;
+      }
+
      a{
       color: var(--app-primary-color);
       text-decoration: none;
